# to-do-list-app

./: README.md  main.cpp  tasklist.txt  tasks.txt
app_TODO/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskmanager.cpp  taskmanager.h
console_TODO/: tasklist.txt
